--- a/challenges/svs_2023.md
+++ b/challenges/svs_2023.md
@@ -27,7 +27,7 @@ Pick one of the data sets below, or a data set you've found, and visualise it.
 | Name | Difficulty | Source | Data | Notes |
 |---|---|---|---|---|
 | 2022 Beer Mile World Classic | Easy | [beermile.com](https://beermile.com/events/4641) | [link](https://github.com/wjsutton/games_night_viz/blob/main/challenges/9_bonus_challenges/202301_sportsvizsunday/2022%20Beer%20Mile%20World%20Classic.xlsx) |
-| International Federation of Tiddlywinks Associations World Singles| Normal | [iftwa.org/world-singles-results](http://iftwa.org/world-singles-results/ ) | [link](https://github.com/wjsutton/games_night_viz/blob/main/challenges/9_bonus_challenges/202301_sportsvizsunday/2022%20Beer%20Mile%20World%20Classic.xlsx) |
+| International Federation of Tiddlywinks Associations World Singles| Normal | [iftwa.org/world-singles-results](http://iftwa.org/world-singles-results/ ) | [link](https://github.com/wjsutton/games_night_viz/blob/main/challenges/9_bonus_challenges/202301_sportsvizsunday/International%20Federation%20of%20Tiddlywinks%20World%20Singles%20Event.xlsx) |
 | eSports earnings | Normal | [esportsearnings.com](https://www.esportsearnings.com/) via [Kaggle](https://www.kaggle.com/datasets/jackdaoud/esports-earnings-for-players-teams-by-game) | [link](https://github.com/wjsutton/games_night_viz/blob/main/challenges/9_bonus_challenges/202301_sportsvizsunday/eSports%20earnings.zip) |
 | Fifa 23 Complete Player Dataset | Heroic | [sofifa.com](https://sofifa.com/) via [Kaggle](https://www.kaggle.com/datasets/cashncarry/fifa-23-complete-player-dataset), [Historical data](https://www.kaggle.com/datasets/stefanoleone992/fifa-22-complete-player-dataset) | [link](https://github.com/wjsutton/games_night_viz/blob/main/challenges/9_bonus_challenges/202301_sportsvizsunday/fifa-23-complete-player-dataset.zip)  |
 
